upload docker image

--- a/pulumi/.env
+++ b/pulumi/.env
@@ -1,8 +1,7 @@
+VERSION=1
 ENV=dev
 AZ=us-east-1a
 
 DB_NAME=cashflowdevdb
 DB_USERNAME=admin
 DB_PASSWORD=krNBk72KsAJvXtdGN82y38jaA5D
-
-MY_IP=192.168.0.169
