--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,4 @@ MYSQL_DATABASE_NAME=cashflow
 MYSQL_USER_PASSWORD=cashflow_user_password
 # DB_HOST=127.0.0.1:3306
 WORKDIR=/app
+PERSIST_MYSQL_DATA=false
