--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,10 @@ MYSQL_ROOT_PASSWORD=cashflowpassword
 MYSQL_USER=cashflow_user
 MYSQL_DATABASE_NAME=cashflow
 MYSQL_USER_PASSWORD=cashflow_user_password
-# DB_HOST=127.0.0.1:3306
+
 WORKDIR=/app
-PERSIST_MYSQL_DATA=false
+
+APP_HOST=localhost
+APP_PORT=8080
+
+# DB_HOST=127.0.0.1:3306
