--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run locally",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "main.go"
-        },
-        {
-            "name": "Go Containerized Debug",
+            "name": "Go containerized debug",
             "type": "go",
             "request": "attach",
             "mode": "remote",
